# rocket-obc-firmware

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  LOGGING.txt  README.md  build.bat  build.sh  copyDataReceiver.sh  copyMeasure.sh  refactor.py  requirements.txt  setup.bat  setup.sh
acs/: CMakeLists.txt
acs/src/: pid_controller.c
ahrs/: CMakeLists.txt
ahrs/include/ahrs/: ahrs_kf.h  kalman_filter.h  madgwick_filter.h  mahony_filter.h
ahrs/src/: ahrs_kf.c  ekf_quat.c  kalman_filter.c  madgwick_filter.c  mahony_filter.c
compute/: CMakeLists.txt  bmp280_controller.c  bmp280_controller.h  constants.h  hw_config.c  kalman.c  kalman.h  logger.c  logger.h  main.c  mpu6050_controller.c  mpu6050_controller.h  pinout_config.h  sd_card_controller.c  sd_card_controller.h
compute/scripts/: build.bat  build.sh  build_and_upload.bat  upload.bat
core/board/: CMakeLists.txt  commands.h  config.h  ign.h  main.c  mission_control.h  radio_utils.c  radio_utils.h  saver.c  saver.h  status.c  status.h  voltage_control.h
core/common/: CMakeLists.txt
core/common/src/: commands_utils.c  measurements_utils.c  radio_utils.c
core/obc/: CMakeLists.txt  commands.c  commands.h  config.h  dataman.c  ign.c  main.c  measurements.c  measurements.h  pinout.h  status.c  status.h
core/obc_read/: CMakeLists.txt  main.c
core/prototyping/: CMakeLists.txt  hw_config.c  main.c
crypto/: CMakeLists.txt
crypto/include/crypto/: parity_check.h  xor_encryption.h
crypto/src/: parity_check.c  xor_encryption.c
drivers/: CMakeLists.txt
drivers/accelerometer/: CMakeLists.txt
drivers/accelerometer/src/: bmi088_driver.c  h3lis331dl_driver.c  lsm6dso32_driver.c  mpu6050_driver.c
drivers/barometer/: CMakeLists.txt
drivers/barometer/src/: bme688_driver.c  bmp280_driver.c  bmp581_driver.c
drivers/battery/src/: battery_driver.c
drivers/buzzer/: CMakeLists.txt
drivers/buzzer/src/: active_buzzer_driver.c  simple_buzzer_driver.c
drivers/console/: CMakeLists.txt
drivers/console/src/: console_input.c
drivers/cpu_temp/: CMakeLists.txt
drivers/cpu_temp/src/: cpu_temp_driver.c
drivers/detonator/: CMakeLists.txt
drivers/detonator/src/: detonator_driver.c
drivers/display/src/: lcd_16x2_i2c_driver.c
drivers/drivers_lib/: CMakeLists.txt
drivers/gpio/: CMakeLists.txt
drivers/gpio/src/: adc_driver.c  i2c_driver.c  pwm_driver.c  spi_driver.c
drivers/gps/: CMakeLists.txt
drivers/gps/src/: nmea_parser.c  u_blox_neo_m9n_driver.c  u_blox_sam_m10q_driver.c
drivers/igniter/src/: igniter_driver.c
drivers/led/src/: w2812_driver.c
drivers/lora/: CMakeLists.txt
drivers/lora/src/: e19_433m20sc_driver.c  e22_400m22s_driver.c  radio_protocol.c  sx126X_driver.c  sx127X_driver.c
drivers/magnetometer/: CMakeLists.txt
drivers/magnetometer/src/: mmc5983ma_driver.c
drivers/potentiometer/: CMakeLists.txt
drivers/servo/: CMakeLists.txt
drivers/servo/src/: pwm_servo_driver.c
drivers/storage/: CMakeLists.txt
drivers/storage/src/: flash_driver.c  sd_driver.c
drivers/thermometer/: CMakeLists.txt
drivers/tools/: CMakeLists.txt
drivers/tools/src/: board_control.c  multithreading.c  time_tracker.c
filters/: CMakeLists.txt
filters/src/: avg_filter.c  exp_filter.c  kalman_filter.c
ins/: CMakeLists.txt
ins/include/ins/: ins_kf.h
ins/src/: ins_kf.c
modules/: CMakeLists.txt
modules/ahrs/: CMakeLists.txt
modules/ahrs/src/: madgwick_filter.c  mahony_filter.c
modules/arming/: CMakeLists.txt
modules/arming/src/: arming.c
modules/commander/: CMakeLists.txt
modules/commander/src/: commander.c
modules/crypto/: CMakeLists.txt
modules/crypto/src/: crc.c
modules/database/: CMakeLists.txt
modules/drivers/: CMakeLists.txt
modules/ekf/: CMakeLists.txt
modules/ekf/src/: ekf.c
modules/flight_sm/: CMakeLists.txt
modules/geo/: CMakeLists.txt
modules/ign/: CMakeLists.txt
modules/logger/: CMakeLists.txt
modules/maths/: CMakeLists.txt
modules/nmea/: CMakeLists.txt
modules/radiolink/: CMakeLists.txt
modules/sm/: CMakeLists.txt
obc/: .gitignore  CMakeLists.txt  NAMING.txt  ahrs.c  ahrs.h  cmd.c  cmd.h  dataman.c  dataman.h  ign.h  main.c  radio.c  sensors.c  sensors.h  sm.c  sm.h  status.c
obc/ahrs/: CMakeLists.txt
obc/api/: CMakeLists.txt
obc/boot/: CMakeLists.txt
obc/core/: CMakeLists.txt
obc/crypto/: CMakeLists.txt
obc/debug/: CMakeLists.txt
obc/docker/: Dockerfile
obc/docs/: CMakeLists.txt
obc/drivers/: CMakeLists.txt
obc/kernel/: CMakeLists.txt
obc/maths/: CMakeLists.txt
obc/middleware/: events.c  events.h
obc/scripts/: build.bat  build.sh  buildDocker.sh  copyGroundStation.sh  copyPrototyping.sh  copySatellite.sh  runEnv.bat  runEnv.sh  runSerial.sh  runSerial3.bat  runSerial5.bat
obc/systems/: ahrs.c  ahrs.h  ign.c  sensors.c  serial.c  serial.h
obc/tests/: CMakeLists.txt
obc/tools/: CMakeLists.txt
obc/utils/: img_to_array.py
prototyping/: CMakeLists.txt  main.c
samples/: CMakeLists.txt
samples/battery/: CMakeLists.txt  main.c
samples/bme688/: CMakeLists.txt  main.c
samples/bmi088/: CMakeLists.txt  main.c
samples/bmp581/: main.c
samples/buzzer_active/: CMakeLists.txt
samples/buzzer_passive/: main.c
samples/cpu/: CMakeLists.txt
samples/detonator/: CMakeLists.txt  main.c
samples/flash/: CMakeLists.txt  main.c
samples/gpio/: CMakeLists.txt  main.c
samples/h3lis331dl/: CMakeLists.txt  main.c
samples/igniter/: main.c
samples/lsm6dso32/: CMakeLists.txt  main.c
samples/max1161X/: CMakeLists.txt
samples/mmc5983ma/: CMakeLists.txt  main.c
samples/rp2040/: CMakeLists.txt  main.c
samples/sd/: CMakeLists.txt  hw_config.c  main.c  pinout.h
samples/simple_buzzer/: CMakeLists.txt  main.c
samples/sx126X/: CMakeLists.txt
samples/sx127X/: CMakeLists.txt  main.c
samples/ubx_neo_m9n/: CMakeLists.txt  main.c
samples/ubx_sam_m10q/: CMakeLists.txt
samples/ws2812/: CMakeLists.txt  main.c
satellite/drivers/: CMakeLists.txt
tools/: CMakeLists.txt  refactor.py  refactor_mappings.json
tools/src/: board_control.c  multithreading.c  time_tracker.c
(+1449 files in other folders)
