add_subdirectory(maths)
add_subdirectory(geo)
add_subdirectory(crypto)
add_subdirectory(drivers)

add_subdirectory(logger)

add_subdirectory(ahrs)
add_subdirectory(database)
add_subdirectory(ekf)
add_subdirectory(flight_sm)
add_subdirectory(nmea)
add_subdirectory(radiolink)

add_subdirectory(ign)