link_libraries(api_lib pico_stdlib)

add_subdirectory(battery)
add_subdirectory(bme688)
add_subdirectory(bmi088)
add_subdirectory(detonator)
add_subdirectory(flash)
add_subdirectory(gpio)
add_subdirectory(h3lis331dl)
add_subdirectory(mmc5983ma)
add_subdirectory(rp2040)
add_subdirectory(sd)
add_subdirectory(simple_buzzer)
add_subdirectory(sx127X)
add_subdirectory(ubx_neo_m9n)
add_subdirectory(ws2812)