link_libraries(api_lib drivers_lib services_lib maths_lib)

add_subdirectory(battery)
add_subdirectory(bme688)
add_subdirectory(bmi088)
add_subdirectory(bmp581)
add_subdirectory(cpu)
add_subdirectory(detonator)
add_subdirectory(flash)
add_subdirectory(gpio)
add_subdirectory(h3lis331dl)
add_subdirectory(lsm6dso32)
add_subdirectory(mmc5983ma)
add_subdirectory(sd)
add_subdirectory(simple_buzzer)
add_subdirectory(sx126X)
add_subdirectory(sx127X)
add_subdirectory(ubx_neo_m9n)
add_subdirectory(ubx_sam_m10q)
add_subdirectory(ws2812)