add_executable(obc_read
    main.c
)

target_link_libraries(obc_read
    module_drivers_hal
    module_drivers_accel
    module_drivers_adc
    module_drivers_barometer
    module_drivers_battery
    module_drivers_buzzer
    module_drivers_gps
    module_drivers_hal
    module_drivers_led
    module_drivers_lora
    module_drivers_magnetometer
    module_drivers_servo
    module_drivers_storage
    module_flight_sm
    module_ign
    module_nmea
    module_ahrs
    module_radiolink
    module_database
    module_maths
    module_geo
    module_crypto
    module_logger
)

obc_add_outputs(obc_read)