link_libraries(tools_lib)

add_subdirectory(gpio)

add_subdirectory(accelerometer)
add_subdirectory(barometer)
add_subdirectory(battery)
add_subdirectory(buzzer)
add_subdirectory(console)
add_subdirectory(display)
add_subdirectory(gps)
add_subdirectory(led)
add_subdirectory(lora)
add_subdirectory(potentiometer)
add_subdirectory(servo)
add_subdirectory(storage)
add_subdirectory(tempr)
add_subdirectory(uv)

add_subdirectory(drivers_lib)