add_subdirectory(hwutils)
add_subdirectory(accelerometer)
add_subdirectory(barometer)
add_subdirectory(battery)
add_subdirectory(flash)
add_subdirectory(gm)
add_subdirectory(gps)
add_subdirectory(led)
add_subdirectory(lora)
add_subdirectory(sd)
add_subdirectory(servo)
add_subdirectory(uv)

add_library(drivers_lib)
target_link_libraries(drivers_lib PUBLIC drivers_accelerometer_lib drivers_barometer_lib drivers_flash_lib drivers_gm_lib drivers_gps_lib drivers_lora_lib drivers_sd_lib drivers_servo_lib drivers_uv_lib)